third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/datetime/feb-30.stderr
TOML parse error at line 1, column 44
  |
1 | "only 28 or 29 days in february" = 1988-02-30T15:15:15Z
  |                                            ^
invalid date-time
value is out of range
